# dicomsync

./: .gitignore  .pre-commit-config.yaml  HISTORY.md  README.md  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
dicomsync/: core.py  exceptions.py  filesystem.py  local.py  logs.py  persistence.py  references.py  routing.py  strings.py  ui.py  xnat.py
dicomsync/cli/: base.py  click_parameter_types.py  compare.py  entrypoint.py  find.py  place.py  send.py
examples/: query_xnat.py  upload_to_xnat.py
tests/: conftest.py  factories.py  test_cli_compare.py  test_cli_entrypoint.py  test_cli_find.py  test_cli_parameters.py  test_cli_place.py  test_cli_send.py  test_core.py  test_local.py  test_persistence.py  test_references.py  test_routing.py  test_ui.py  test_xnat.py  test_xnat_upload.py
