[tool.poetry]
name = "dicomsync"
version = "0.2.0"
description = "Synchronize medical imaging studies between storage modalities"
authors = ["sjoerdk <sjoerd.kerkstra@radboudumc.nl>"]
license = "apache"

[tool.poetry.dependencies]
python = "^3.9"
python-slugify = "^8.0.4"
xnat = "^0.6.2"
pydantic = "^2.8.0"
coloredlogs = "^15.0.1"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.0"
factory-boy = "^3.3.0"
pre-commit = "^3.6.2"

[tool.poetry.scripts]
dicomsync = "dicomsync.cli.entrypoint:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
