[project]
name = "dicomsync"
version = "1.2.0"
description = "Synchronize medical imaging studies between storage modalities"
authors = [{ name = "sjoerdk", email = "sjoerd.kerkstra@radboudumc.nl" }]
requires-python = "~=3.9"
readme = "README.md"
license = "apache"
dependencies = [
    "python-slugify>=8.0.4,<9",
    "xnat>=0.6.2,<0.7",
    "pydantic>=2.8.0,<3",
    "coloredlogs>=15.0.1,<16",
    "tabulate>=0.9.0,<0.10",
    "jinja2>=3.1.6,<4",
]

[project.scripts]
dicomsync = "dicomsync.cli.entrypoint:main"

[dependency-groups]
dev = [
    "pytest>=8.1.0,<9",
    "factory-boy>=3.3.0,<4",
    "pre-commit>=3.6.2,<4",
    "pytest>=8.3.3,<9",
    "coverage>=7.8.0,<8",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39, py310, py311
[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run pytest
"""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

