[project]
name = "dicomsync"
version = "1.3.0"
description = "Synchronize medical imaging studies between storage modalities"
authors = [{ name = "sjoerdk", email = "sjoerd.kerkstra@radboudumc.nl" }]
requires-python = "~=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "python-slugify>=8.0.4,<9",
    "coloredlogs>=15.0.1,<16",
    "tabulate>=0.9.0,<0.10",
    "jinja2>=3.1.6,<4",
    "setuptools>=80.9.0",
    "xnat>=0.7.2",
    "pydantic>=2.12.3",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

]

[project.scripts]
dicomsync = "dicomsync.cli.entrypoint:main"

[dependency-groups]
dev = [
    "pytest>=8.1.0,<9",
    "factory-boy>=3.3.0,<4",
    "pre-commit>=3.6.2,<4",
    "pytest>=8.3.3,<9",
    "coverage>=7.8.0,<8",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

